--- a/src/Components/TextImage.css
+++ b/src/Components/TextImage.css
@@ -1,40 +1,21 @@
-.left-image {
-    background-color: #14161b;
+.base-image-text {
     min-height: 5vh;
     display: flex;
-    flex-direction: row;
     align-items: center;
     justify-content: center;
     font-size: calc(10px + 1vmin);
-    color: white;
+    color: white; 
+}
+
+.left-image {
+    flex-direction: row;
 }
 .right-image {
-    background-color: #14161b;
-    min-height: 5vh;
-    display: flex;
     flex-direction: row-reverse;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 1vmin);
-    color: white;
 }
 .up-image {
-    background-color: #14161b;
-    min-height: 5vh;
-    display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 1vmin);
-    color: white;
 }
 .down-image {
-    background-color: #14161b;
-    min-height: 5vh;
-    display: flex;
     flex-direction: column-reverse;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 1vmin);
-    color: white;
 }
