--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -9,11 +9,13 @@
     justify-content: center;
     font-size: calc(10px + 1vmin);
     color: white;
+    z-index: 100;
 }
 
 #HeaderLeft {
     left: 0px;
     top: 0px;
+    height: 100%;
     position: absolute;
     display: flex;
     flex-direction: row;
@@ -32,14 +34,15 @@
 }
 
 .logoButton > img {
-    height: 8vh;
+    height: 50%;
+    margin: 0 auto;
 }
 
 .logoButton {
     background-color: #ffffff00;
-    margin-top: 50%;
-    margin-bottom: 50%;
-    margin-left: 1vw;
+    height: 100%;
+    margin-left: 2vw;
+    align-content: center;
 }
 
 .logoButton:hover {
@@ -47,8 +50,8 @@
 }
 
 .headerButton {
-	background-color:#424242;
-	border-radius:28px;
+	background-color:#42424200;
+	border-radius: 10px;
 	border:1px solid #ffffff;
 	display:inline-block;
 	cursor:pointer;
@@ -62,7 +65,7 @@
 	text-decoration:none;
 }
 .headerButton:hover {
-	background-color:#bfbfbf;
+	color:#ff6060;
 }
 .headerButton:active {
 	position:relative;
